--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-youtube": "^7.13.0",
+    "screenfull": "^5.1.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
